--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -16,6 +16,7 @@ body {
     height: 100%;
     font-family: var(--font-family);
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 ul,
@@ -37,7 +38,7 @@ input {
 
 .container {
     width: 100%;
-    max-width: 1480px;
+    max-width: 1230px;
     margin: 0 auto;
     padding: 0 20px;
 }
