--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -79,16 +79,46 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px 0;
+    gap: 32px;
 }
 
 .header__logo {
     height: 32px;
     width: 32px;
 }
+
+.nav__catalog {
+    display: none;
+    @include btn-primary;
+    padding: 16px 15px 16px 50px;
+    white-space: nowrap;
+    font-size: 20px;
+    position: relative;
+    &:hover {
+        @include btn-primary-hover;
+    }
+}
+
+.nav__catalog::before {
+    position: absolute;
+    content: "";
+    background-image: url(../../imgs/icons/there-dot.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 32px;
+    height: 32px;
+    top: 12px;
+    left: 4px;
+    transform: translate(50%);
+}
+
 .header__nav {
     display: flex;
     align-items: center;
-    background-color: rebeccapurple;
+    gap: 32px;
+    width: 100%;
+    justify-content: end;
 }
 
 .search__icon {
@@ -98,4 +128,157 @@
 .search__input {
     display: flex;
     align-items: center;
+    width: fit-content;
+    flex-grow: 0;
+}
+
+.nav__search {
+    display: none;
+    width: 100%;
+    height: 100%;
+    padding: 2px 3px;
+    margin-left: 8px;
+
+    &::placeholder {
+        font-size: 16px;
+        color: var(--03);
+    }
+
+    &::-webkit-search-cancel-button {
+        visibility: hidden;
+    }
+}
+
+.search__icon svg {
+    stroke: #100e0e;
+    &:hover {
+        stroke: var(--prime);
+    }
+}
+.nav__phone {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.nav__phone-mobil {
+    padding: 2px 3px;
+    & > svg:hover {
+        fill: var(--prime);
+    }
+}
+
+.nav__phone-tablet {
+    display: none;
+    color: var(--1);
+}
+
+.header__actions {
+    display: none;
+    align-items: center;
+    gap: 24px;
+
+    & > a {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.header__action-basket {
+    @include buy-gren;
+    padding: 16px 31px 16px 50px;
+    font-size: 20px;
+    color: var(--color-white);
+    position: relative;
+    cursor: pointer;
+
+    &:hover {
+        @include transform;
+    }
+}
+
+.header__action-basket::before {
+    position: absolute;
+    content: "";
+    background-image: url(../../imgs/icons/basket-icon.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    left: 15px;
+    top: calc(50% - 10px);
+}
+
+.basket-count {
+    box-shadow: inset 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #46c609;
+    border-radius: 50%;
+    padding: 4px 12px;
+    width: 34px;
+    height: 32px;
+    margin-left: 4px;
+}
+
+@media screen and (min-width: 768px) {
+    .nav__search {
+        display: flex;
+    }
+    .search__input {
+        flex-grow: 1;
+    }
+    .nav__phone-tablet {
+        display: flex;
+    }
+
+    .nav__phone-mobil svg {
+        fill: var(--03);
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .header__logo {
+        display: none;
+    }
+
+    .nav__catalog {
+        display: flex;
+    }
+
+    .search__input {
+        border: 2px solid var(--03);
+        border-radius: 8px;
+        background-color: var(--color-white);
+        padding: 14px 26px;
+
+        &:hover {
+            border: 2px solid var(--prime);
+        }
+    }
+
+    .nav__search {
+        font-size: 18px;
+    }
+
+    .search__icon svg {
+        width: 21px;
+        height: 21px;
+        stroke: var(--03);
+        &:hover {
+            stroke: var(--03);
+        }
+    }
+    .header__middle {
+        box-shadow: none;
+        padding: 22px 0;
+    }
+
+    .nav__menu,
+    .nav__phone {
+        display: none;
+    }
+
+    .header__actions {
+        display: flex;
+    }
 }
